src/App.css
.App {
  font-family: sans-serif;
  color: var(--button-color);
  width: 100%;
  min-height: 100vh;
}

.emoji {
  margin: 0 auto;
}

:root {
  --main-color: #6c31ff;
  --background-main: #fcca979c;
  --background-forecast: #fcc997;
  --white: #fff;
  --border-box: rgb(108, 49, 255, 0.3);
  --black: rgb(33, 33, 33);
  --light-black: rgba(33, 33, 33, 0.677);
}

body {
  font-family: "Segoe UI";
  /* background: linear-gradient(120deg, #ffb76f9c, #5f0bfc88); */
  color: var(--button-color);
  width: 100%;
  min-height: 100vh;
}

section.inner-box {
  background-color: var(--background-forecast);
  margin: 1em 0;
}

.inner-box-day {
  display: flex;
  flex-direction: column;
  align-items: stretch;

}

.main {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.container {
  padding: 1 4em !important;
  margin: 0 auto;
}

.block {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  /* border: 3px solid #9dbeff; */
  padding: 2em;
  box-shadow: 5px 5px 15px 1px var(--light-black);
  /* background: linear-gradient(120deg, #ffb76f9c, #5f0bfc88); */
  background: var(--background-main);
  justify-content: space-around;
}

.enter-city {
  position: relative;
  display: flex;
}

.weather-temperature {
  display: flex;
  align-items: center;
}

.icon {
  position: absolute;
  top: calc(50%);
  left: 1rem;
}

.enter-city label,
.enter-city .form-control {
  left: 0.5rem;
  padding-left: 3rem;
  /* border: 2px solid #000 !important; */
  background-color: var(--white);
}

.form-control {
  width: 100%;
}

Button {
  float: left;
}

Button.btn {
  display: block;
  border: 2px solid var(--white);
  padding: 0;
  font-size: 16px;
  border-radius: 5px;
  transition: all 200ms ease-in-out;
  box-shadow: rgba(37, 39, 89, 0.08) 0px 8px 8px 0;
  cursor: pointer;
}

Button.btn:hover {
  background-color: var(--white) !important;
  color: var(--black) !important;
  /* border: 2px solid var(--main-color) !important; */
  /* opacity: 0.6; */
}

.CurrentInfo {
  padding: 1em 0;
}

h1#city {
  font-size: 48px;
  font-weight: 600;
}

#current-degree {
  font-size: 60px;
}

.temperature {
  color: rgb(33, 33, 33);
  /* font-size: 58px; */
  font-size: 90px;
  font-weight: 400;
  line-height: 1;
}

.weather-temperature img {
  margin-top: 5px;
  height: 96px;
  width: 96px;
}

.weather-temperature .units {
  font-size: 20px;
  position: relative;
  top: -25px;
}

.weather-temperature a {
  text-decoration: none;
  color: var(--main-color);
}

.weather-temperature .active {
  color: var(--black);
  cursor: default;
  text-decoration: none;
}

.weather-temperature .active:hover {
  text-decoration: none;
}

span {
  font-size: 15px;
  float: top;
}

#day-time {
  opacity: 0.7;
}

#description {
  opacity: 0.7;
}

#description::first-letter {
  text-transform: capitalize;
}

.precipitation {
  opacity: 0.7;
}

.humidity {
  opacity: 0.7;
}

.wind {
  opacity: 0.7;
}

.border-success {
  --bs-border-opacity: 1;
  border-color: var(--main-color) !important;
}

.weather-forecast {
  display: flex;
  background-color: var(--background-forecast);
  /* border-radius: 5px; */
  padding: 1em 0;
}

.box-day {
  text-align: center;
  color: var(--black);
  width: 100% !important;
  justify-content: center;
  margin: 2em 0;
}

.day-of-week {
  font-size: 20px;
  /* opacity: .7; */
  /* color: var(--white); */
  font-weight: 700;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
}

.weather-forecast-temp-min {
  opacity: 0.5;
}

.weather-forecast-temp {
  display: flex;
  font-size: 16px;
  flex-direction: column;
}

.item {
  align-items: center;
  flex-direction: column;
  justify-content: center;
}

@media (max-width: 576px) {
  body {
    padding: 2em 1em;
  }

  .weather-forecast {
    flex-wrap: wrap;
  }

  .main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .weather-forecast-temp {
    font-size: 16px;
    flex-direction: row;
  }

  .temperature {
    font-size: 60px;
    font-weight: 400;
    line-height: 1;
  }


}

@media (max-width: 768px) {
  .container {
    margin: 0 auto;

  }

  .box-day {
    margin: 0.2em 0;
  }

  .block {
    padding: 1em;
  }

  .weather-forecast {
    flex-wrap: wrap;
    align-items: center;
  }

  .main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .inner-box-day {
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    margin: 0.2em 0;
  }

  .day-of-week {
    display: flex;
    flex-direction: column;
  }

  .weather-forecast-temp {
    font-size: 16px;
    flex-direction: row;
  }

}

@media (min-width: 992px) {
  .box-day {
    margin: 0.5em 0;
  }
}

@media (min-width: 1200px) {
  body {
    padding: 5em 15em;
  }
}

@media (max-width: 1200px) {
  body {
    padding: 2em 2em;
  }
}

